Added new close icon

--- a/resources.qrc
+++ b/resources.qrc
@@ -59,6 +59,7 @@
         <file>resources/images/web/forward.png</file>
         <file>resources/images/web/reload.png</file>
         <file>resources/images/web/wheel.png</file>
+        <file>resources/images/web/close.png</file>
 
 	
 
