--- a/ui/bottombar/MOBBar.ui
+++ b/ui/bottombar/MOBBar.ui
@@ -34,7 +34,7 @@
         <enum>QLayout::SizeConstraint::SetFixedSize</enum>
        </property>
        <item>
-        <widget class="QToolButton" name="toolButton_Autopilot">
+        <widget class="QToolButton" name="toolButton_MOB">
          <property name="icon">
           <iconset resource="../../resources.qrc">
            <normaloff>:/resources/images/bottombar/imagebutton_mob.png</normaloff>:/resources/images/bottombar/imagebutton_mob.png</iconset>
@@ -53,7 +53,7 @@
       </layout>
      </item>
      <item>
-      <spacer name="horizontalSpacer">
+      <spacer name="horizontalSpacer_Port">
        <property name="orientation">
         <enum>Qt::Orientation::Horizontal</enum>
        </property>
@@ -68,7 +68,7 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_CN">
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_MOB">
+        <layout class="QHBoxLayout" name="horizontalLayout_CN">
          <item>
           <widget class="QLabel" name="label_LastKnwonPosition">
            <property name="text">
@@ -98,7 +98,7 @@
           </layout>
          </item>
          <item>
-          <widget class="QLabel" name="label">
+          <widget class="QLabel" name="label_textBearing">
            <property name="text">
             <string>Bearing:</string>
            </property>
@@ -138,7 +138,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="label_2">
+          <widget class="QLabel" name="label_textRange">
            <property name="text">
             <string>Range:</string>
            </property>
@@ -175,7 +175,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="label_3">
+          <widget class="QLabel" name="label_textElapsed">
            <property name="text">
             <string>Elapsed Time:</string>
            </property>
@@ -215,7 +215,7 @@ border-bottom-color: rgb(83, 83, 84);</string>
       </layout>
      </item>
      <item>
-      <spacer name="horizontalSpacer_2">
+      <spacer name="horizontalSpacer_Starboard">
        <property name="orientation">
         <enum>Qt::Orientation::Horizontal</enum>
        </property>
