--- a/ui/bottombar/AnchorBar.ui
+++ b/ui/bottombar/AnchorBar.ui
@@ -37,7 +37,7 @@
         <widget class="QToolButton" name="toolButton_Anchor">
          <property name="icon">
           <iconset>
-           <normaloff>:/resources/images/bottombar/imagebutton_anchor.png</normaloff>:/resources/images/bottombar/imagebutton_anchor.png</iconset>
+           <normaloff>:/resources/svg/OpenBridge/anchor-iec.svg</normaloff>:/resources/svg/OpenBridge/anchor-iec.svg</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -751,7 +751,7 @@
         <widget class="QToolButton" name="toolButton_Hide">
          <property name="icon">
           <iconset>
-           <normaloff>:/resources/images/bottombar/icon_hide.png</normaloff>:/resources/images/bottombar/icon_hide.png</iconset>
+           <normaloff>:/resources/svg/OpenBridge/unfold-less-google.svg</normaloff>:/resources/svg/OpenBridge/unfold-less-google.svg</iconset>
          </property>
          <property name="iconSize">
           <size>
