--- a/ui/bottombar/BottomBar.ui
+++ b/ui/bottombar/BottomBar.ui
@@ -60,7 +60,7 @@
        </property>
        <property name="icon">
         <iconset resource="../../resources.qrc">
-         <normaloff>:/resources/images/bottombar/imagebutton_mydata.png</normaloff>:/resources/images/bottombar/imagebutton_mydata.png</iconset>
+         <normaloff>:/resources/svg/OpenBridge/database.svg</normaloff>:/resources/svg/OpenBridge/database.svg</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -76,11 +76,11 @@
      <item>
       <widget class="QToolButton" name="toolButton_MOB">
        <property name="text">
-        <string>MOB</string>
+        <string>POB</string>
        </property>
        <property name="icon">
         <iconset resource="../../resources.qrc">
-         <normaloff>:/resources/images/bottombar/imagebutton_mob.png</normaloff>:/resources/images/bottombar/imagebutton_mob.png</iconset>
+         <normaloff>:/resources/svg/OpenBridge/alarm-pob.svg</normaloff>:/resources/svg/OpenBridge/alarm-pob.svg</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -100,7 +100,7 @@
        </property>
        <property name="icon">
         <iconset resource="../../resources.qrc">
-         <normaloff>:/resources/images/bottombar/imagebutton_autopilot.png</normaloff>:/resources/images/bottombar/imagebutton_autopilot.png</iconset>
+         <normaloff>:/resources/svg/OpenBridge/command-autopilot.svg</normaloff>:/resources/svg/OpenBridge/command-autopilot.svg</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -120,7 +120,7 @@
        </property>
        <property name="icon">
         <iconset resource="../../resources.qrc">
-         <normaloff>:/resources/images/bottombar/imagebutton_apps.png</normaloff>:/resources/images/bottombar/imagebutton_apps.png</iconset>
+         <normaloff>:/resources/svg/OpenBridge/applications.svg</normaloff>:/resources/svg/OpenBridge/applications.svg</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -140,7 +140,7 @@
        </property>
        <property name="icon">
         <iconset resource="../../resources.qrc">
-         <normaloff>:/resources/images/bottombar/imagebutton_anchor.png</normaloff>:/resources/images/bottombar/imagebutton_anchor.png</iconset>
+         <normaloff>:/resources/svg/OpenBridge/anchor-iec.svg</normaloff>:/resources/svg/OpenBridge/anchor-iec.svg</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -160,7 +160,7 @@
        </property>
        <property name="icon">
         <iconset resource="../../resources.qrc">
-         <normaloff>:/resources/images/bottombar/imagebutton_alarms.png</normaloff>:/resources/images/bottombar/imagebutton_alarms.png</iconset>
+         <normaloff>:/resources/svg/OpenBridge/alarm-general.svg</normaloff>:/resources/svg/OpenBridge/alarm-general.svg</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -180,7 +180,7 @@
        </property>
        <property name="icon">
         <iconset resource="../../resources.qrc">
-         <normaloff>:/resources/images/bottombar/imagebutton_settings.png</normaloff>:/resources/images/bottombar/imagebutton_settings.png</iconset>
+         <normaloff>:/resources/svg/OpenBridge/settings-iec.svg</normaloff>:/resources/svg/OpenBridge/settings-iec.svg</iconset>
        </property>
        <property name="iconSize">
         <size>
