--- a/ui/settings/Apps.ui
+++ b/ui/settings/Apps.ui
@@ -63,29 +63,57 @@
        </property>
        <item>
         <widget class="QToolButton" name="toolButton_Up">
-         <property name="text">
-          <string>/\</string>
+         <property name="icon">
+          <iconset resource="../../resources.qrc">
+           <normaloff>:/resources/svg/OpenBridge/arrow-up-google.svg</normaloff><normalon>:/resources/svg/OpenBridge/arrow-up-google.svg</normalon></iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QToolButton" name="toolButton_Down">
-         <property name="text">
-          <string>\/</string>
+         <property name="icon">
+          <iconset resource="../../resources.qrc">
+           <normaloff>:/resources/svg/OpenBridge/arrow-down-google.svg</normaloff><normalon>:/resources/svg/OpenBridge/arrow-down-google.svg</normalon></iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QToolButton" name="toolButton_Add">
-         <property name="text">
-          <string>+</string>
+         <property name="icon">
+          <iconset resource="../../resources.qrc">
+           <normaloff>:/resources/svg/OpenBridge/widget-add-google.svg</normaloff><normalon>:/resources/svg/OpenBridge/widget-add-google.svg</normalon></iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QToolButton" name="toolButton_Remove">
-         <property name="text">
-          <string>-</string>
+         <property name="icon">
+          <iconset resource="../../resources.qrc">
+           <normaloff>:/resources/svg/OpenBridge/delete-google.svg</normaloff><normalon>:/resources/svg/OpenBridge/delete-google.svg</normalon></iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
          </property>
         </widget>
        </item>
