--- a/ui/web/NavigationBar.ui
+++ b/ui/web/NavigationBar.ui
@@ -36,7 +36,7 @@
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>:/resources/images/web/home.png</normaloff>:/resources/images/web/home.png</iconset>
+       <normaloff>:/resources/svg/OpenBridge/home.svg</normaloff>:/resources/svg/OpenBridge/home.svg</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -59,7 +59,7 @@
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>:/resources/images/web/back.png</normaloff>:/resources/images/web/back.png</iconset>
+       <normaloff>:/resources/svg/OpenBridge/arrow-left-google.svg</normaloff>:/resources/svg/OpenBridge/arrow-left-google.svg</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -82,7 +82,7 @@
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>:/resources/images/web/forward.png</normaloff>:/resources/images/web/forward.png</iconset>
+       <normaloff>:/resources/svg/OpenBridge/arrow-right-google.svg</normaloff>:/resources/svg/OpenBridge/arrow-right-google.svg</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -105,7 +105,7 @@
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>:/resources/images/web/reload.png</normaloff>:/resources/images/web/reload.png</iconset>
+       <normaloff>:/resources/svg/OpenBridge/refresh-google.svg</normaloff>:/resources/svg/OpenBridge/refresh-google.svg</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -135,7 +135,7 @@
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>:/resources/images/web/wheel.png</normaloff>:/resources/images/web/wheel.png</iconset>
+       <normaloff>:/resources/svg/OpenBridge/configure.svg</normaloff>:/resources/svg/OpenBridge/configure.svg</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -168,7 +168,7 @@
      </property>
      <property name="icon">
       <iconset>
-       <normaloff>:/resources/images/web/close.png</normaloff>:/resources/images/web/close.png</iconset>
+       <normaloff>:/resources/svg/OpenBridge/close-google.svg</normaloff>:/resources/svg/OpenBridge/close-google.svg</iconset>
      </property>
      <property name="iconSize">
       <size>
