Added comments ToDo: move alarms to svg

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,9 +1,12 @@
 <!DOCTYPE RCC><RCC version="1.0">
     <qresource>
+
+        <!-- JSON files -->
         <file>resources/json/configuration.json</file>
         <file>resources/json/units.json</file>
         <file>resources/json/signalk.json</file>
 
+        <!-- Authors' pictures -->
         <file>resources/images/about/rmontella_64x64.png</file>
         <file>resources/images/about/gmellone_64x64.png</file>
         <file>resources/images/about/cgdevita_64x64.png</file>
@@ -11,9 +14,11 @@
         <file>resources/images/about/aciaramella_64x64.png</file>
         <file>resources/images/about/fizzo_64x64.png</file>
 
+        <!-- Splash logo -->
         <file>resources/images/other/carbon_base.png</file>
         <file>resources/images/other/splash_logo.png</file>
 
+        <!-- Generic UI icons from OpenBridge -->
         <file>resources/svg/OpenBridge/unfold-less-google.svg</file>
         <file>resources/svg/OpenBridge/up-iec.svg</file>
         <file>resources/svg/OpenBridge/down-iec.svg</file>
@@ -22,6 +27,7 @@
         <file>resources/svg/OpenBridge/arrow-up-google.svg</file>
         <file>resources/svg/OpenBridge/arrow-down-google.svg</file>
 
+        <!-- Bottom Apps icons from OpenBridge -->
         <file>resources/svg/OpenBridge/database.svg</file>
         <file>resources/svg/OpenBridge/command-autopilot.svg</file>
         <file>resources/svg/OpenBridge/applications.svg</file>
@@ -30,8 +36,24 @@
         <file>resources/svg/OpenBridge/anchor-iec.svg</file>
         <file>resources/svg/OpenBridge/alarm-pob.svg</file>
 
+        <!-- Alarms and alerts icons from OpenBridge -->
+        <file>resources/svg/OpenBridge/alarm-abandon.svg</file>
+        <file>resources/svg/OpenBridge/alarm-aground.svg</file>
+        <file>resources/svg/OpenBridge/alarm-fire.svg</file>
 
+        <!-- Navigation bar icons from OpenBridge -->
+        <file>resources/svg/OpenBridge/arrow-left-google.svg</file>
+        <file>resources/svg/OpenBridge/arrow-right-google.svg</file>
+        <file>resources/svg/OpenBridge/close-google.svg</file>
+        <file>resources/svg/OpenBridge/refresh-google.svg</file>
+        <file>resources/svg/OpenBridge/home.svg</file>
+        <file>resources/svg/OpenBridge/configure.svg</file>
 
+        <!-- Launcher icons from OpenBridge -->
+        <file>resources/svg/OpenBridge/chevron-double-left-google.svg</file>
+        <file>resources/svg/OpenBridge/chevron-double-right-google.svg</file>
+
+        <!-- Anchor bitmap icons -->
         <file>resources/images/bottombar/anchor_drop.png</file>
         <file>resources/images/bottombar/anchor_raise.png</file>
         <file>resources/images/bottombar/anchor_up.png</file>
@@ -39,13 +61,8 @@
         <file>resources/images/bottombar/anchor_reset.png</file>
         <file>resources/images/bottombar/anchor_release.png</file>
 
-
+        <!-- Alarms bitmap icons -->
         <file>resources/images/bottombar/alarm_alarm.png</file>
-
-        <file>resources/svg/OpenBridge/alarm-abandon.svg</file>
-        <file>resources/svg/OpenBridge/alarm-aground.svg</file>
-        <file>resources/svg/OpenBridge/alarm-fire.svg</file>
-
         <file>resources/images/bottombar/alarm_abandon.png</file>
         <file>resources/images/bottombar/alarm_adrift.png</file>
         <file>resources/images/bottombar/alarm_anchor.png</file>
@@ -54,20 +71,12 @@
         <file>resources/images/bottombar/alarm_piracy.png</file>
         <file>resources/images/bottombar/alarm_sinking.png</file>
 
+        <!-- FairWindSK icon -->
         <file>resources/images/mainwindow/fairwind_icon.png</file>
 
+        <!-- Launcher icon -->
         <file>resources/images/icons/apps_icon.png</file>
         <file>resources/images/icons/webapp-256x256.png</file>
-
-        <file>resources/svg/OpenBridge/arrow-left-google.svg</file>
-        <file>resources/svg/OpenBridge/arrow-right-google.svg</file>
-        <file>resources/svg/OpenBridge/close-google.svg</file>
-        <file>resources/svg/OpenBridge/refresh-google.svg</file>
-        <file>resources/svg/OpenBridge/home.svg</file>
-        <file>resources/svg/OpenBridge/configure.svg</file>
-
-        <file>resources/svg/OpenBridge/chevron-double-left-google.svg</file>
-        <file>resources/svg/OpenBridge/chevron-double-right-google.svg</file>
 
 	
 
