--- a/ui/settings/SignalK.ui
+++ b/ui/settings/SignalK.ui
@@ -11,6 +11,18 @@
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout_SignalK">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item row="0" column="0">
     <widget class="QGroupBox" name="groupBox_SignalK_Paths">
      <property name="sizePolicy">
@@ -42,12 +54,11 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>356</width>
-           <height>240</height>
+           <width>369</width>
+           <height>393</height>
           </rect>
          </property>
-         <layout class="QGridLayout" name="gridLayout_Paths">
-         </layout>
+         <layout class="QGridLayout" name="gridLayout_Paths"/>
         </widget>
        </widget>
       </item>
